--- a/devices.cfg
+++ b/devices.cfg
@@ -528,3 +528,11 @@ arch = arm64
 devicenames = cedric
 block = /dev/block/bootdevice/by-name/boot
 
+# Motorola Moto X4
+[payton]
+author = "Lavavex"
+version = "1.0"
+kernelstring = "NetHunter kernel for Motorola Moto X4"
+arch = arm64
+devicenames = payton
+block = /dev/block/bootdevice/by-name/boot
